# home-urbit

./: .dockerignore  .gitignore  LICENSE  README.md  balena.yml  docker-compose.yaml
anchor/: Dockerfile.template  buildmod.sh  peer.conf  run.sh  server.conf  show-peer  wireguard-linux-compat.patch
caddy/: Caddyfile  Dockerfile  start-caddy.sh
minio/: Dockerfile  start-minio.sh
netdata/: Dockerfile  apps_groups.conf  netdata.conf  startup.sh
nginx/: Dockerfile  nginx.conf  start-nginx.sh
orchestrator/: Cargo.toml
radicle/: Dockerfile  start-radicle-seed.sh
traefik/: Dockerfile  start-nginx.sh  traefik.yml
urbit/: Dockerfile  Dockerfile.template  get-urbit-code.sh  install-urbit.sh  reset-urbit-code.sh  run-urbit-cmd.sh  start-urbit.sh
urbit/keys/: info.txt
urbit/piers/: info.txt
