[package]
name        = "home-urbit-orchestrator"
description = "The orchestrator is responsible for managing the lifecycle of Home-Urbit"
homepage    = "https://github.com/odyslam/home-urbit"
authors     = ["odysseas.eth"]
version     = "0.1.0"
edition     = "2021"
license     ="GPLv3"


[dependencies]
